--- a/src/components/videocard/videocard.css
+++ b/src/components/videocard/videocard.css
@@ -11,7 +11,7 @@
     box-shadow: 1px 1px 5px 1px var(--COLOR-SHADOW-2);
     background-color: var(--OFF-WHITE);
     transition: transform 0.2s ease-in, box-shadow 0.2s ease-in;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .grand-video-img-container {
@@ -30,6 +30,8 @@
     width: 100%;
     object-fit: cover;
     border-radius: 5px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 .grand-img-overlay{
@@ -116,4 +118,36 @@
 
 .grand-video-card-btn:hover{
     background-color: var(--LIGHT-GREY);
+}
+
+.grand-video-options-modal{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 120%;
+    right: 10%;
+    min-height: 2rem ;
+    width: max-content;
+    min-width: 8rem;
+    border-radius: 3px;
+    background-color: white;
+    z-index: 10;
+    overflow: hidden;
+}
+
+.grand-video-options-button{ 
+    display: flex;
+    gap: 10px;
+    padding: 1rem 2rem 1rem 1rem;
+    cursor: pointer;
+    font-size: 1.3rem;
+    font-weight: 500;
+    border: 0;
+    min-width:0;
+    color: var(--OFF-BLACK);
+    background: transparent;
+}
+
+.grand-video-options-button:hover{
+    background-color: var(--OFF-WHITE);
 }
