--- a/src/index.css
+++ b/src/index.css
@@ -92,10 +92,14 @@
     .grand-filter {
         display: block;
         position: absolute;
-        height: calc(100% - 6rem);
-        width: auto;
+        height: 100%;
+        width: 100%;
         right: 0;
         background-color: var(--COLOR-SIDEBAR-BG);
+    }
+
+    .grand-filter .btn-nav-text{
+        display: none;
     }
 
     .grand-body .navbar-responsive .nav-items .nav-hamburger {
