minor css change

--- a/src/components/videocard/videocard.css
+++ b/src/components/videocard/videocard.css
@@ -50,6 +50,10 @@
     z-index: 2;
 }
 
+.grand-img-overlay span,h3{
+    color: var(--COLOR-TEXT-WHITE);
+}
+
 .grand-video-img-container:hover .grand-img-overlay{
     display: flex;
 }
@@ -78,6 +82,7 @@
 
 .grand-video-img-close span{
     font-size: 2rem;
+    color: var(--COLOR-TEXT-WHITE);
 }
 
 .grand-btn-lg{
