--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,10 @@
     }
 }
 
+.Toastify__toast-container{
+    font-size: 1.4rem;
+}
+
 @media only screen and (max-width: 1200px) {
     .grand-body {
         grid-template-columns: 7rem 1fr;
