--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,24 @@
     color: var(--OFF-BLACK);
 }
 
+
+.grand-empty{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    width: 100%;
+    font-weight: 500;
+    font-size: 2.4rem;
+}
+
+.grand-empty-img{
+    object-fit: cover;
+    width: 30%;
+    min-width: 20rem;
+}
+
 @media only screen and (max-width: 768px) {
     :root {
         font-size: 56.25%;
