--- a/src/components/videocard/videocard.css
+++ b/src/components/videocard/videocard.css
@@ -5,8 +5,8 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: stretch;
-    max-width: 30rem;
-    height: 26.7rem;
+    max-width: 32rem;
+    /* height: 26.7rem; */
     border-radius: 5px;
     box-shadow: 1px 1px 5px 1px var(--COLOR-SHADOW-2);
     background-color: var(--OFF-WHITE);
@@ -21,6 +21,7 @@
     width: 100%;
     flex-shrink: 0;
     aspect-ratio: 20/11.3;
+    /* max-height:16.95rem; */
     overflow: hidden;
 }
 
