--- a/src/pages/explorepage/explorepage.css
+++ b/src/pages/explorepage/explorepage.css
@@ -31,5 +31,11 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
-    min-height: 80%;
+}
+
+.grand-video-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(26rem,1fr));
+    gap: 1.5rem;
+    margin: auto;
 }
