--- a/src/pages/historypage/historypage.css
+++ b/src/pages/historypage/historypage.css
@@ -7,7 +7,8 @@
 }
 
 .grand-history-list{
-    display: flex;;
-    gap: 1rem;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(26rem,1fr));
+    gap: 1.5rem;
+    margin: auto;
 }
