--- a/src/pages/likedVideospage/likedvideopage.css
+++ b/src/pages/likedVideospage/likedvideopage.css
@@ -1,4 +1,11 @@
 .grand-liked-video-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(26rem,1fr));
+    gap: 1.5rem;
+    margin: auto;
+}
+
+.grand-liked-video-empty{
     display: flex;
     gap: 1rem;
     flex-wrap: wrap;
