--- a/src/pages/playlistpage/playlistpage.css
+++ b/src/pages/playlistpage/playlistpage.css
@@ -18,7 +18,7 @@
     gap: 1rem;
 }
 
-.playlist-options .btn{
+.playlist-options .btn {
     color: var(--COLOR-TEXT-BLACK);
 }
 
@@ -37,9 +37,9 @@
 }
 
 .playlist-video-content {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(26rem, 1fr));
+    gap: 1.5rem;
 }
 
 /* MODAL */
@@ -130,15 +130,13 @@
     width: 3px;
 }
 
-
-@media screen and (max-width:768px) {
-    
-    .playlist-grid{
+@media screen and (max-width: 768px) {
+    .playlist-grid {
         grid-template-areas: "options" "list";
         grid-template-columns: auto;
     }
 
-    .playlist-video-container{
+    .playlist-video-container {
         margin: 2rem 0;
         padding: 0;
     }
